# ts-bot

./: CMakeLists.txt  Dockerfile  README.md  config.h  database.sql  entrypoint.sh  init.sql  main.c  utilities.c  utilities.h
bot/: compare.c  compare.h
bot/events/: channelDelete.c  channelInactive.c  clientJoin.c  clientLeft.c  clientMove.c  clientRecording.c  clientServerGroupChange.c  clientStartAfk.c  clientStopBeAfk.c  events.h
collections/: collections.h  list.c  tree.c
communication/: communication.c  communication.h
communication/network/: network.c  network.h
database/: database.c  database.h
highLevelFunctions/: highLevelFunctions.c  highLevelFunctions.h
rankings/: rankings.c  rankings.h
